--- a/CSS&JS 마스터/메인페이지.css
+++ b/CSS&JS 마스터/메인페이지.css
@@ -51,27 +51,106 @@ body {
 #filter_formButton_box {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.diary_select {
+.dropdown_box {
+  position: relative;
+}
+
+#diary_select {
+  appearance: none;
   width: 120px;
-  height: 32px;
+  height: 48px;
   position: sticky;
   top: 0;
   z-index: 1;
   backdrop-filter: blur(10px);
-  margin-bottom: 32px;
-}
-
-.diary_select select {
   border-radius: 8px;
   border: 1px solid #c7c7c7;
-  padding: 4px;
-  gap: 10px;
+  padding: 12px 10px;
+  line-height: 22px;
+  margin-bottom: 42px;
+  --철수의CSS변수: "전체";
 }
 
+#diary_select::after {
+  content: var(--철수의CSS변수);
+}
+
+.dropdown_menu {
+  display: none;
+  position: absolute;
+  top: 56px;
+  width: 120px;
+  border: 1px solid #c7c7c7;
+  border-radius: 8px;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.dropdown_menu input {
+  display: none;
+}
+
+.dropdown_menu label {
+  height: 48px;
+  padding: 12px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -1px;
+  color: #5f5f5f;
+  display: flex;
+  justify-content: space-between;
+}
+
+.select_img {
+  display: none;
+}
+
+.dropdown_menu label:hover {
+  color: #299c00;
+  background-color: #3ab50f0d;
+  opacity: 95%;
+}
+
+.dropdown_menu label:hover img {
+  display: block;
+}
+
+#diary_select:checked + .dropdown_menu {
+  display: block;
+}
+
+#search_bar {
+  display: flex;
+  width: 320px;
+  height: 48px;
+  border-radius: 100px;
+  border: 1px solid #c7c7c7;
+  padding: 12px 16px;
+  gap: 8px;
+  flex-grow: 1;
+}
+
+#search_bar input {
+  width: 149px;
+  height: 24px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -1px;
+  color: #ababab;
+  border: none;
+}
+
+/* .formButton_box {
+  width: 100%;
+} */
+
 .formButton {
+  width: 140px;
   height: 48px;
   border-radius: 8px;
   padding: 8px 10px;
@@ -284,14 +363,14 @@ a {
   background-color: #00000080;
 }
 
-.modal_form {
+#modal_form {
   width: 640px;
   height: 560px;
   top: calc(50vh - 280px);
   left: calc(50vw - 320px);
   border-radius: 24px;
   padding: 24px;
-  background-color: #ffffff;
+  background-color: var(--backgroundColor);
   border: 1px solid #d4d3d3;
   position: absolute;
   display: flex;
@@ -305,7 +384,7 @@ a {
   font-size: 24px;
   line-height: 24px;
   letter-spacing: -1px;
-  color: #000000;
+  color: var(--color);
 }
 
 .form_radioBox {
@@ -321,7 +400,7 @@ a {
   font-size: 20px;
   line-height: 24px;
   letter-spacing: -1px;
-  color: #000000;
+  color: var(--color);
 }
 
 .radioBox_body {
@@ -348,8 +427,8 @@ a {
   font-size: 18px;
   line-height: 24px;
   letter-spacing: -1px;
-  color: #333333;
   display: block;
+  color: var(--color);
 }
 
 .textBox {
@@ -373,8 +452,8 @@ a {
   font-size: 14px;
   line-height: 20px;
   letter-spacing: -1px;
-  color: #333333;
   display: block;
+  color: var(--color);
 }
 
 .titleBox input {
@@ -383,7 +462,7 @@ a {
   border-radius: 8px;
   padding: 12px 16px;
   gap: 10px;
-  background-color: #ffffff;
+  background-color: var(--backgroundColor);
   border: 1px solid #d4d3d3;
 }
 
@@ -401,7 +480,7 @@ a {
   font-size: 14px;
   line-height: 20px;
   letter-spacing: -1px;
-  color: #333333;
+  color: var(--color);
   display: block;
 }
 
@@ -411,7 +490,7 @@ a {
   border-radius: 8px;
   padding: 12px 16px;
   gap: 10px;
-  background-color: #ffffff;
+  background-color: var(--backgroundColor);
   border: 1px solid #d4d3d3;
   resize: none;
 }
@@ -427,7 +506,7 @@ a {
   width: 104px;
   height: 48px;
   border-radius: 8px;
-  border: 1px solid #000000;
+  border: 1px solid var(--buttonBorderColor);
   background-color: #ffffff;
   padding: 8px 10px;
   gap: 10px;
@@ -435,7 +514,8 @@ a {
   font-size: 18px;
   line-height: 24px;
   letter-spacing: -1px;
-  color: #1c1c1c;
+  color: var(--color);
+  background-color: var(--backgroundColor);
 }
 
 .registerButton {
@@ -445,8 +525,8 @@ a {
   border: none;
   padding: 8px 10px;
   gap: 10px;
-  background-color: #c7c7c7;
-  color: #f2f2f2;
+  background-color: var(--registerBackgroundColor);
+  color: var(--registerColor);
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
@@ -462,7 +542,7 @@ a {
   border-radius: 24px;
   padding: 24px;
   gap: 40px;
-  background-color: #ffffff;
+  background-color: var(--backgroundColor);
   display: flex;
   flex-direction: column;
   top: calc(50vh - 100px);
@@ -484,7 +564,7 @@ a {
   line-height: 24px;
   letter-spacing: -1px;
   text-align: center;
-  color: #000000;
+  color: var(--color);
 }
 
 .register_content {
@@ -495,7 +575,7 @@ a {
   line-height: 24px;
   letter-spacing: -1px;
   text-align: center;
-  color: #333333;
+  color: var(--color);
 }
 
 #modal_register button {
@@ -504,8 +584,8 @@ a {
   border-radius: 8px;
   padding: 8px 10px;
   gap: 10px;
-  background-color: #000000;
-  color: #ffffff;
+  background-color: var(--buttonBackgroundColor);
+  color: var(--backgroundColor);
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
@@ -519,7 +599,7 @@ a {
   border-radius: 24px;
   padding: 24px;
   gap: 40px;
-  background-color: #ffffff;
+  background-color: var(--backgroundColor);
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -541,7 +621,7 @@ a {
   line-height: 24px;
   letter-spacing: -1px;
   text-align: center;
-  color: #000000;
+  color: var(--color);
 }
 
 .cancel_content {
@@ -550,6 +630,7 @@ a {
   line-height: 24px;
   letter-spacing: -1px;
   text-align: center;
+  color: var(--color);
 }
 
 .cancel_button_box {
@@ -563,15 +644,15 @@ a {
   width: 104px;
   height: 48px;
   border-radius: 8px;
-  border: 1px solid #000000;
-  background-color: #ffffff;
+  border: 1px solid var(--buttonBorderColor);
+  background-color: var(--backgroundColor);
   padding: 8px 10px;
   gap: 10px;
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: -1px;
-  color: #1c1c1c;
+  color: var(--color);
 }
 
 .realCancelButton {
@@ -580,15 +661,15 @@ a {
   border-radius: 8px;
   padding: 8px 10px;
   gap: 10px;
-  background-color: #000000;
+  background-color: var(--registerCancelBackgroundColor);
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: -1px;
-  color: #f2f2f2;
+  color: var(--registerCancelColor);
 }
 
-.modal_delete_diary {
+#modal_delete_diary {
   width: 480px;
   height: 200px;
   border-radius: 24px;
@@ -714,6 +795,18 @@ a {
     max-width: 640px;
     width: 80vw;
   }
+
+  #diary_select {
+    order: 2;
+  }
+
+  #search_bar {
+    order: 1;
+  }
+
+  .formButton {
+    order: 3;
+  }
 }
 
 #dog_image_box {
@@ -786,4 +879,78 @@ a {
 }
 
 @media (max-width: 400px) {
+}
+
+.modal_header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.darkMode_toggle {
+  display: flex;
+  gap: 8px;
+}
+
+.darkMode_toggle label {
+  width: 55px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 24px;
+  letter-spacing: -1px;
+  color: var(--color);
+}
+
+#toggle {
+  appearance: none;
+  width: 40px;
+  height: 24px;
+  border-radius: 100px;
+  padding: 2px;
+  background-color: #e4e4e4;
+}
+
+#toggle::after {
+  display: block;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 100px;
+  transition: 0.3s;
+}
+
+#toggle:checked {
+  background-color: #3ad84a;
+}
+
+#toggle:checked::after {
+  margin-left: 18px;
+}
+
+:root {
+  --backgroundColor: #ffffff;
+  --color: #000000;
+  --inputPlaceholderColor: #ababab;
+  --buttonColor: #1c1c1c;
+  --buttonBorderColor: #000000;
+  --buttonBackgroundColor: #000000;
+  --registerBackgroundColor: #c7c7c7c7;
+  --registerColor: #f2f2f2;
+  --registerCancelBackgroundColor: #000000;
+  --registerCancelColor: #f2f2f2;
+}
+
+[darkmode="on"] {
+  --backgroundColor: #1c1c1c;
+  --color: #ffffff;
+  --radioButtonColor: #ffffff;
+  --inputBackgroundColor: #000000;
+  --inputPlaceholderColor: #777777;
+  --inputBorderColor: #333333;
+  --buttonBorderColor: #5f5f5f;
+  --buttonBackgroundColor: #ffffff;
+  --registerBackgroundColor: #333333;
+  --registerColro: #777777;
+  --registerCancelBackgroundColor: #f2f2f2;
+  --registerCancelColor: #000000;
 }
